--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  fluid_bottom_nav_bar: ^1.3.0
 
 dev_dependencies:
   flutter_test:
