--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   fluid_bottom_nav_bar: ^1.3.0
+  flutter_advanced_drawer: ^1.3.5
+  http: ^0.13.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +48,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
